Issue #14: Break out configuration and fix up comments

--- a/config/dot.env
+++ b/config/dot.env
@@ -1,3 +1,10 @@
 OPENAI_API_KEY="<enter your data>"
 SLACK_ALERT_CHANNEL_ID="<enter your data>"
 SLACK_ALERT_TOKEN="<enter your data>"
+PATHWAY_REST_CONNECTOR_HOST="<enter your data>"
+PATHWAY_REST_CONNECTOR_PORT="<enter your data>"
+EMBEDDER_LOCATOR="<enter your data>"
+EMBEDDING_DIMENSION="<enter your data>"
+MODEL_LOCATOR="<enter your data>"
+MAX_TOKEN="<enter your data>"
+TEMPERATURE="<enter your data>"
