--- a/requirements.txt
+++ b/requirements.txt
@@ -217,6 +217,7 @@ soupsieve==2.7
 SQLAlchemy==2.0.40
 sqlglot==10.6.1
 stack-data==0.6.3
+streamlit==1.45.0
 surya-ocr==0.4.14
 sympy==1.14.0
 tabulate==0.9.0
