--- a/config/dot.env
+++ b/config/dot.env
@@ -1,10 +1,10 @@
 OPENAI_API_KEY="<enter your data>"
 SLACK_ALERT_CHANNEL_ID="<enter your data>"
 SLACK_ALERT_TOKEN="<enter your data>"
-PATHWAY_REST_CONNECTOR_HOST="<enter your data>"
-PATHWAY_REST_CONNECTOR_PORT="<enter your data>"
-EMBEDDER_LOCATOR="<enter your data>"
-EMBEDDING_DIMENSION="<enter your data>"
-MODEL_LOCATOR="<enter your data>"
-MAX_TOKEN="<enter your data>"
-TEMPERATURE="<enter your data>"
+PATHWAY_REST_CONNECTOR_HOST="0.0.0.0"
+PATHWAY_REST_CONNECTOR_PORT="8080"
+EMBEDDER_LOCATOR="text-embedding-ada-002"
+EMBEDDING_DIMENSION="1536"
+MODEL_LOCATOR="gpt-3.5-turbo"
+MAX_TOKEN="400"
+TEMPERATURE="0.0"
